--- a/helado.css
+++ b/helado.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-background-image:url(https://i.postimg.cc/sxvKnNXC/image.png);
+background-image:url(https://thumbs.dreamstime.com/b/hermoso-arte-fondo-abstracto-azul-violeta-degradado-cielo-pintura-al-%C3%B3leo-sobre-lienzo-dibujado-mano-por-el-artista-174833630.jpg);
 background-repeat: no-repeat;
 background-size: 100%;
   }
