--- a/helado.css
+++ b/helado.css
@@ -4,42 +4,58 @@ background-image:url(https://thumbs.dreamstime.com/b/hermoso-arte-fondo-abstract
 background-repeat: no-repeat;
 background-size: 100%;
   }
+main {
 
-  h1, h2, h3 {
+    margin-top: 200px;
+    margin: 100px;
+}
+h1, h2, h3 {
     color: #7d8ff1;
-
+    
   }
 
-  a {
-    color: #007bff;
-    text-decoration: none;
-  }
-
-  header {
+header {
     padding: 20px;
     text-align: center;
   }
+.logo{
+    margin-left:50px ;
+}
+  .botones {
+    text-align: right;
+    margin-right: 100px;
+    margin-top: -80px;
+}
 
-
-  nav {
+a {
+    text-decoration: none;
+    font-size: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+nav {
 
     padding: 10px;
   }
 
-  nav ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
+ul {
+      display: inline-flex;
+      list-style: none;
+      gap: 16px;
+  }
+  
 
-  nav ul li {
+nav ul li {
     display: inline;
     margin-right: 10px;
   }
-  section {
+section {
     padding: 20px;
   }
-
-  div {
+div {
     text-align: center;
   }
