--- a/helado.css
+++ b/helado.css
@@ -81,8 +81,15 @@ section{
   line-height: 1.5;
 }
 footer {
+
   color: #fff;
   text-align: center;
-  margin-top: 40%;
 
+
+}
+.redes {
+    display: inline-flex;
+    list-style: none;
+    gap: 16px;
+    font-size: 60px;
 }
